--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "fiber": "^1.0.4",
     "husky": "^4.3.8",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0"
