Adiciona Sidebar e Projetos

--- a/.env copy
+++ b/.env copy
@@ -1,2 +1,7 @@
+OauthApp
 GITHUB_ID=59d9f248cfbe371e8850
 GITHUB_SECRET=5c5d76b96deccd3281966b6279822cbd94b906e1
+
+GithubAPP
+GITHUB_ID=Iv1.84d04df1aea121e3
+GITHUB_SECRET=8cc37362d23143ad3a35281be688296bfc0d603f
