--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.13",
