--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/auth-next": "5.0.0-1611071776.3646657",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.2",
     "@octokit/rest": "^18.0.12",
     "body-parser": "^1.19.0",
@@ -37,7 +38,8 @@
     "mongoose": "^5.11.13",
     "nuxt": "^2.14.6",
     "passport": "^0.4.1",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
