--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/toast": "^3.3.1",
     "@octokit/rest": "^18.0.12",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
@@ -38,8 +39,10 @@
     "markdown-it-task-lists": "^2.1.1",
     "mongoose": "^5.11.13",
     "nuxt": "^2.14.6",
+    "nuxt-validate": "^1.0.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "slugify": "^1.4.7",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
