--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.17.1",
     "markdown-it-task-lists": "^2.1.1",
     "mongoose": "^5.11.13",
+    "mongoose-unique-validator": "^2.0.3",
     "nuxt": "^2.14.6",
     "nuxt-validate": "^1.0.1",
     "passport": "^0.4.1",
