--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "slugify": "^1.4.7",
+    "v-tooltip": "^2.1.3",
+    "vue-mention": "^1.0.0",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
