--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "linkifyjs": "^3.0.0-beta.3",
     "markdown-it-task-lists": "^2.1.1",
     "mongoose": "^5.11.13",
     "mongoose-unique-validator": "^2.0.3",
