--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "markdown-it-task-lists": "^2.1.1",
     "mongoose": "^5.11.13",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "nuxt": "^2.14.6",
     "nuxt-validate": "^1.0.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "sharp": "^0.28.1",
     "slugify": "^1.4.7",
     "v-tooltip": "^2.1.3",
     "vue-mention": "^1.0.0",
