--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nuxt-validate": "^1.0.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "pdf-image": "^2.0.0",
     "sharp": "^0.28.1",
     "slugify": "^1.4.7",
     "v-tooltip": "^2.1.3",
