--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,12 +1,12 @@
-name: cd
+name: Deploy Production
 
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +15,6 @@ jobs:
         uses: garygrossgarten/github-action-ssh@release
         with:
           command: 'source ~/.nvm/nvm.sh; cd ~/server/; ./update.sh; ./deploy.sh dev-flow; exit'
-          host: dev.terrakrya.com
+          host: prod-sites.terrakrya.com
           username: root
           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
