--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "yarn lint:style --fix && yarn lint:js --fix"
   },
   "dependencies": {
+    "@mycure/vue-jitsi-meet": "^0.0.7",
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/auth-next": "5.0.0-1611071776.3646657",
     "@nuxtjs/axios": "^5.12.2",
