Altera estrategia de login para local

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-jwt": "^6.1.1",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "linkifyjs": "^3.0.0-beta.3",
     "markdown-it-task-lists": "^2.1.1",
     "matrix-js-sdk": "^12.2.0",
@@ -38,6 +41,7 @@
     "nuxt-validate": "^1.0.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
     "pdf-image": "^2.0.0",
     "sharp": "^0.28.1",
     "slugify": "^1.4.7",
