--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "pdf-image": "^2.0.0",
+    "quill-markdown-shortcuts": "^0.0.10",
+    "quilljs-markdown": "^1.1.10",
     "sharp": "^0.28.1",
     "slugify": "^1.4.7",
     "uuid": "^8.3.2",
     "v-tooltip": "^2.1.3",
     "vue-mention": "^1.0.0",
+    "vue-quill-editor": "^3.0.6",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
