Implementa convites e onboarding

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,13 @@
-Terrakrya Dev
-GITHUB_ID=Iv1.84d04df1aea121e3
-GITHUB_SECRET=8cc37362d23143ad3a35281be688296bfc0d603f
+SECRET='some-secret'
+JITSI_SERVER_URL=
+MATRIX_HOMESERVER=
+DEFAULT_MATRIX_ROOM=
+SPACES_SECRET=
+SPACES_KEY=
+DEFAULT_STORAGE_BUCKET=name
+STORAGE_BUCKET_ENDPOINT=https://nyc3.digitaloceanspaces.com
+DEFAULT_STORAGE_BUCKET_ROOT_FOLDER=folder-name/
+DEFAULT_STORAGE_BUCKET_FULL_URL=https://name.nyc3.digitaloceanspaces.com/folder-name/
+MONGODB_URI=
+MONGODB_URI=
+MONGO_CA_CERT=
