--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "dev-flow",
   "version": "1.0.0",
   "private": true,
- "nodeVersion": ">=12.0.0",
-  "scripts": {
+  "engines": {
+    "node": "14.x"
+  },
+    "scripts": {
     "dev:docker": "docker-compose -f docker-compose.development.yml up --build",
     "dev": "nuxt",
     "build": "nuxt build",
