--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,8 +1,6 @@
-
 name: dev-flow
 services:
-- build_command: yarn build
-  environment_slug: node-js
+- dockerfile_path: Dockerfile
   github:
     branch: dev
     deploy_on_push: true
