--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "14.x"
   },
-    "scripts": {
+  "scripts": {
     "dev:docker": "docker-compose -f docker-compose.development.yml up --build",
     "dev": "nuxt",
     "build": "nuxt build",
@@ -36,6 +36,7 @@
     "express-jwt": "^6.1.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "jsrtf": "^0.0.3",
     "linkifyjs": "^3.0.0-beta.3",
     "lodash": "^4.17.21",
     "markdown-it-task-lists": "^2.1.1",
